Removed auth and dashboard from client and server
