# server/apispec.yaml
@@ -1,127 +1,102 @@
 openapi: "3.0.2"
 info:
-  version: "1.0"
-  title: Welcome to the Products API!
-  description: This API allows user to handle products
+    version: "1.0"
+    title: Welcome to the Products API!
+    description: This API allows user to handle products
 servers:
-  - url: "http://localhost:5001/api"
-    description: Development server
+    - url: "http://localhost:5001/api"
+      description: Development server
 paths:
-  /products:
-    get:
-      summary: Returns a list of products
-      description: Get a list of products
-      operationId: get-products
-      tags:
-        - products
-      parameters:
-        - schema:
-            type: integer
-            minimum: 1
-          in: query
-          name: limit
-          description: The number of products to return
-          required: false
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  products:
-                    type: array
-                    items:
-                      $ref: "#/components/schemas/Product"
-                  currentPage:
-                    type: integer
-                  totalPages:
-                    type: integer
-                  itemsPerPage:
-                    type: integer
-                  totalItems:
-                    type: integer
-                required:
-                  - products
-                  - currentPage
-                  - totalPages
-                  - itemsPerPage
-                  - totalItems
-        400:
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        500:
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-  /reports:
-    get:
-      summary: Returns a list of reports
-      description: Get a list of reports
-      operationId: get-reports
-      security:
-        - bearerAuth: []
-      tags:
-        - reports
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
+    /products:
+        get:
+            summary: Returns a list of products
+            description: Get a list of products
+            operationId: get-products
+            tags:
+                - products
+            parameters:
+                - schema:
+                      type: string
+                      minimum: 1
+                  in: query
+                  name: sortOrder
+                  description: The field to sort on
+                  required: false
+                - schema:
+                      type: string
+                      minimum: 1
+                  in: query
+                  name: direction
+                  description: The order desc or asc
+                  required: false
+            responses:
+                200:
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    products:
+                                        type: array
+                                        items:
+                                            $ref: "#/components/schemas/Product"
+                                required:
+                                    - products
+                400:
+                    description: Bad Request
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/Error"
+                500:
+                    description: Internal Server Error
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/Error"
 components:
-  securitySchemes:
-    bearerAuth:
-      type: http
-      scheme: bearer
-  schemas:
-    Product:
-      type: object
-      properties:
-        id:
-          type: integer
-        name:
-          type: string
-        description:
-          type: string
-        price:
-          type: string
-        categoryName:
-          type: string
-          nullable: true
-        imageName:
-          type: string
-          nullable: true
-        imageDescription:
-          type: string
-          nullable: true
-        discountValue:
-          type: number
-          nullable: true
-        discountType:
-          type: string
-          nullable: true
-      required:
-        - id
-        - name
-        - description
-        - price
-        - categoryName
-        - imageName
-        - imageDescription
-        - discountValue
-        - discountType
-    Error:
-      type: object
-      properties:
-        message:
-          type: string
+    schemas:
+        Product:
+            type: object
+            properties:
+                id:
+                    type: integer
+                name:
+                    type: string
+                description:
+                    type: string
+                price:
+                    type: string
+                categoryName:
+                    type: string
+                    nullable: true
+                imageName:
+                    type: string
+                    nullable: true
+                imageDescription:
+                    type: string
+                    nullable: true
+                discountValue:
+                    type: number
+                    nullable: true
+                discountType:
+                    type: string
+                    nullable: true
+            required:
+                - id
+                - name
+                - description
+                - price
+                - categoryName
+                - imageName
+                - imageDescription
+                - discountValue
+                - discountType
+        Error:
+            type: object
+            properties:
+                message:
+                    type: string
 tags:
-  - name: products
+    - name: products
